<resources>
    <string name="app_name">Project Two New</string>
    <string name="wellcome">Wellcome,</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="signUp">SignUp</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="CreateAccount">Create Account</string>
    <string name="nameUser">Name User</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="home">Home</string>
    <string name="table">Table</string>
    <string name="myCard">My Card</string>
    <string name="user">User</string>
    <string name="address_email">user@gmail.com</string>
    <string name="add_table">Thêm Bảng</string>
    <string name="nameTable">Tên Bảng</string>
    <string name="add">Thêm</string>
    <string name="cancel">Đóng</string>
    <string name="remember_pass">Remember Password</string>
    <string name="start">Bắt Đầu</string>
    <string name="flow_update">Theo Dõi Và Cập Nhật</string>
    <string name="nd_qt">Chúng Tôi Sẽ Hiển Thị Hoạt Động Quan Trọng Nhất Tại Đây</string>
    <string name="name_card">Tên Thẻ</string>
    <string name="note_card">Ghi Chú</string>
    <string name="time">Thời Gian Hoàn Thành</string>
    <string name="add_card">Thêm Thẻ</string>
    <string name="ds_cv">Danh Sách Công Việc</string>
    <string name="them_muc">Thêm Mục…</string>
    <string name="miet_ta_the">Chỉnh Sửa Miêu Tả Thẻ…</string>
    <string name="tep_dinh_kem">Tệp Đính Kèm…</string>
    <string name="add_user">Thêm Thành Viên…</string>
    <string name="ngay_het_han">Ngày Hết Hạn :</string>
    <string name="dichuyenthe">Di Chuyển Thẻ</string>
    <string name="saochepthe">Sao Chép Thẻ</string>
    <string name="search">Search…</string>
    <string name="xem">Xem</string>
</resources>