<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#009688"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome"
        android:textSize="30sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_https_24"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_remenber_pass"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_pass"
            android:layout_gravity="center_horizontal"
            android:textColor="#7A7171"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#009688"
            android:textColor="#fff"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/bt_signUp"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signUp"
            android:background="#009688"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:visibility="gone"
        />

</LinearLayout>