<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="430dp"
    android:minWidth="320dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:textColor="#009688"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_addCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_addNameCard"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/name_card"
            android:maxLength="10"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_credit_card_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_addNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_addNoteCard"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/note_card"
            android:maxLength="15"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_addTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_addTime"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/time"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            android:inputType="date"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/bt_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/bt_addCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/custom_bt"
            android:textColor="#fff"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/custom_bt"
            android:textColor="#fff"
            android:layout_marginStart="15dp"
            />
    </LinearLayout>

</LinearLayout>