<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_home"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#009688"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:text="@string/start"
        android:textColor="#000"
        app:drawableStartCompat="@drawable/ic_baseline_star_border_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:background="#009688"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:src="@drawable/work"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flow_update"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nd_qt"
            android:textColor="#fff"
            />
    </LinearLayout>

</LinearLayout>