<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#009688">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:textSize="30sp"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="370dp"
        android:background="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_emailSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_signUp"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_passNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass_new"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_https_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_cfPassNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cfPass_new"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:hint="@string/ConfirmPass"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_https_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_create"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:text="@string/signUp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#009688"
            android:textColor="#fff"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_signUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:visibility="gone"
        />

</LinearLayout>